--- a/package.json
+++ b/package.json
@@ -68,13 +68,15 @@
     "react-native": "~0.54.1",
     "react-native-easy-grid": "^0.1.17",
     "react-native-orientation": "^3.1.3",
+    "react-navigation": "^1.5.11",
     "react-redux": "^5.0.2",
     "react-router-dom": "^4.1.1",
     "redux": "^3.6.0",
     "redux-logger": "^2.8.1",
     "redux-thunk": "^2.2.0",
     "sequelize": "^4.3.1",
-    "socket.io": "^2.0.3"
+    "socket.io": "^2.0.3",
+    "socket.io-client": "^2.1.0"
   },
   "description": "This project was bootstrapped with [Create React Native App](https://github.com/react-community/create-react-native-app).",
   "author": "",
