--- a/package.json
+++ b/package.json
@@ -65,9 +65,11 @@
     "prop-types": "^15.5.8",
     "react": "16.3.0",
     "react-dom": "^16.0.0",
-    "react-native": "~0.54.1",
+    "react-native": "^0.54.4",
+    "react-native-cli": "^2.0.1",
     "react-native-easy-grid": "^0.1.17",
     "react-native-orientation": "^3.1.3",
+    "react-native-orientation-locker": "^1.0.10",
     "react-navigation": "^1.5.11",
     "react-redux": "^5.0.2",
     "react-router-dom": "^4.1.1",
